<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <HorizontalScrollView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="60dp"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:gravity="bottom">


            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="250dp"
                android:layout_height="400dp"
                android:layout_marginStart="15.4dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"

                android:layout_marginBottom="60dp"
                android:elevation="0dp"
                app:cardBackgroundColor="#f1f1f1"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="210dp"
                        android:layout_marginTop="10dp"
                        android:background="#f1f1f1"
                        app:srcCompat="@drawable/close"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="245dp"
                        android:layout_margin="15.4dp"

                        android:contentDescription="@string/todo"
                        android:src="@drawable/watch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="10.4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15.4dp"
                        android:layout_marginEnd="15.4dp"
                        android:lineSpacingExtra="2.6sp"
                        android:text="@string/tudor_black_bay"
                        android:textColor="#000"
                        android:textSize="13.4sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15.4dp"
                        android:layout_marginTop="1dp"
                        android:lineSpacingExtra="2.8sp"
                        android:text="@string/reference_m79540_0006"
                        android:textColor="#131314"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15.4dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/_658_00"
                        android:textColor="#be0100" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"

                android:layout_width="250dp"
                android:layout_height="400dp"
                android:layout_marginStart="15.4dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="30dp"
                android:layout_marginBottom="60dp"
                android:elevation="0dp"
                app:cardBackgroundColor="#f1f1f1"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="210dp"
                        android:layout_marginTop="10dp"
                        android:background="#f1f1f1"
                        app:srcCompat="@drawable/close"
                        android:contentDescription="@string/todo" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="245dp"
                        android:layout_margin="15.4dp"

                        android:contentDescription="@string/todo"
                        android:src="@drawable/watch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="10.4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15.4dp"
                        android:layout_marginEnd="15.4dp"
                        android:lineSpacingExtra="2.6sp"
                        android:text="@string/tudor_black_bay"
                        android:textColor="#000"
                        android:textSize="13.4sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15.4dp"
                        android:layout_marginTop="1dp"
                        android:lineSpacingExtra="2.8sp"
                        android:text="@string/reference_m79540_0006"
                        android:textColor="#131314"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15.4dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/_658_00"
                        android:textColor="#be0100" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"

                android:layout_width="250dp"
                android:layout_height="400dp"
                android:layout_marginStart="15.4dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="30dp"
                android:layout_marginBottom="60dp"
                android:elevation="0dp"
                app:cardBackgroundColor="#f1f1f1"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="210dp"
                        android:layout_marginTop="10dp"
                        android:background="#f1f1f1"
                        app:srcCompat="@drawable/close"
                        android:contentDescription="@string/todo" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="245dp"
                        android:layout_margin="15.4dp"

                        android:contentDescription="@string/todo"
                        android:src="@drawable/watch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="10.4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15.4dp"
                        android:layout_marginEnd="15.4dp"
                        android:lineSpacingExtra="2.6sp"
                        android:text="@string/tudor_black_bay"
                        android:textColor="#000"
                        android:textSize="13.4sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15.4dp"
                        android:layout_marginTop="1dp"
                        android:lineSpacingExtra="2.8sp"
                        android:text="@string/reference_m79540_0006"
                        android:textColor="#131314"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15.4dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/_658_00"
                        android:textColor="#be0100" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_alignEnd="@id/cardview"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-7dp"
        android:layout_marginBottom="-18dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="322dp"
            android:layout_height="60dp"
            android:background="@drawable/button_bg_stroke"
            android:padding="15dp"
            android:text="@string/next"
            android:textColor="#be0100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#040303"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1598_00"
            android:textColor="#040303"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardview"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="-40dp"
        android:text="@string/my_bag_03"
        android:textColor="#050505"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/todo" />


</RelativeLayout>


